fix openshift

--- a/client/src/src/app/gui/left-menu/left-menu.component.css
+++ b/client/src/src/app/gui/left-menu/left-menu.component.css
@@ -16,3 +16,8 @@ a:hover {
   color: blue;
   cursor: pointer;
 }
+
+.list-text-description {
+  font-size: smaller;
+  color: dimgrey;
+}
